# alex

./: .gitignore  README.md  pyproject.toml
config/opt/: overfitting_test.yaml  small_test.yaml  small_test_preprocess_on_the_fly.yaml
src/alex/dataset/: README.md  classify_frames_openai.py  dataset.py  download_youtube.py  make_dataset.py
src/alex/idm/: run_idm.py
src/alex/model/: factory.py  modeling_alex_opt.py  processing_alex.py  temp.py  util.py
src/alex/train/: preprocess_data.py  train.py
src/dataset/: classify_frames_local.py  download_youtube_transcripts.py  sample_video_frames.py  util.py
src/model/: README.md  modeling_alex.py  modeling_alex_opt.py  processing_alex.py  test.py
